<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:fab="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		fab:layout_collapseParallaxMultiplier="1.0"
		tools:context="org.openmrs.mobile.activities.ACBaseActivity">

	<android.support.design.widget.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="?attr/colorPrimary"
				android:minHeight="?attr/actionBarSize"
				app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
				app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

	</android.support.design.widget.AppBarLayout>

	<include layout="@layout/content_base" />

	<com.github.clans.fab.FloatingActionMenu
			android:id="@+id/floatingActionMenu"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="bottom|end"
			android:layout_margin="0dp"
			android:visibility="gone"
			fab:menu_backgroundColor="@android:color/transparent"
			fab:menu_fab_label="@string/label_close"
			fab:menu_labels_ellipsize="end"
			fab:menu_labels_singleLine="true">

		<com.github.clans.fab.FloatingActionButton
				android:id="@+id/start_visit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_start_visit"
				fab:fab_label="@string/label_start_visit"
				fab:fab_size="mini" />

		<com.github.clans.fab.FloatingActionButton
				android:id="@+id/edit_visit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_start_visit"
				fab:fab_label="@string/label_edit_visit"
				android:visibility="gone"
				fab:fab_size="mini" />

		<com.github.clans.fab.FloatingActionButton
				android:id="@+id/audit_data_form"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_start_visit"
				fab:fab_label="@string/label_audit_data"
				fab:fab_size="mini" />

		<com.github.clans.fab.FloatingActionButton
				android:id="@+id/add_visit_image"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_start_visit"
				fab:fab_label="@string/label_add_image"
				fab:fab_size="mini" />

		<com.github.clans.fab.FloatingActionButton
				android:id="@+id/end_visit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_start_visit"
				android:visibility="gone"
				fab:fab_label="@string/label_end_visit"
				fab:fab_size="mini" />

		<com.github.clans.fab.FloatingActionButton
				android:id="@+id/add_visit_task"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_playlist_add_white_48dp"
				fab:fab_label="@string/add_visit_task_dialog_title"
				fab:fab_size="mini"
				android:visibility="gone" />
		
		<com.github.clans.fab.FloatingActionButton
				android:id="@+id/edit_Patient"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_edit"
				fab:fab_label="@string/edit_patient"
				fab:fab_size="mini"
				fab:menu_colorNormal="@color/color_primary_dark"/>


	</com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>