<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:checkableBehavior="single">
		<item
				android:id="@+id/navItemFindPatientRecord"
				android:icon="@drawable/ic_nav_find_patient"
				android:title="@string/nav_find_patient" />
		<item
				android:id="@+id/navItemPatientLists"
				android:icon="@drawable/ic_nav_patient_lists"
				android:title="@string/nav_patient_list" />
	</group>
	
	<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@android:color/darker_gray" />
	
	<group android:checkableBehavior="single">
		<item
				android:id="@+id/navLogout"
				android:icon="@drawable/ic_logout"
				android:title="@string/action_logout" />
		<item
				android:id="@+id/footerSpacer1"
				android:checkable="false"
				android:enabled="false"
				android:orderInCategory="200"
				android:title="" />
	</group>
</menu>